17) kernel: ralink_wifi: fix support VHT in apcli mode for MT7612.<br>
18) kernel: ralink_wifi: disable VHT in WEP encryption mode for apcli(more compat with wifi aliance recomendtions).<br>
19) kernel: ralink_wifi: fix kernel api mismatch u(g)id types to u(g)id_t.<br>
20) kernel: ralink_wifi: allow mac address changes.<br>
21) kernel: ralink_wifi: MT7612 fix LastTxRate update.<br>
22) kernel: ralink_wifi: MT76xx anonse 40MHz SGI only if 40MHz BW enabled.<br>
23) kernel: drop bogus check in file_open_root().<br>
24) kernel: mips: dma-default: fix 32-bit fall back to GFP_DMA.<br>
25) kernel: mips: hibernate: flush TLB entries earlier.<br>
26) kernel: mips: bitops.h: Avoid inline asm for constant FLS.<br>
27) kernel: net: gro: should be ECN friendly.<br>
28) kernel: net: gro: should aggregate frames without DF.<br>
29) kernel: net: add address assign type "SET".<br>
30) kernel: net: init perm_addr in register_netdevice().<br>
31) kernel: ethtool: set addr_assign_type to NET_ADDR_SET when addr is passed on create.<br>
32) kernel: ethtool: consolidate work with ethtool_ops.<br>
33) kernel: ethtool: make .get_dump_data() harder to misuse by drivers.<br>
34) kernel: netfilter: ctnetlink: fix leak in error path of ctnetlink_create_expect.<br>
35) kernel: netfilter: ctnetlink: don't permit ct creation with random tuple.<br>
36) kernel: netlink: validate addr_len on bind.<br>
37) kernel: netlink: change presentation of portid in procfs to unsigned.<br>
38) kernel: rtnetlink: fix error return code in rtnl_link_fill().<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
3) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
4) need add davfs2 webui for managment online disk drives (as yandex disk and others).<br>
<br>
<br>
<br>